<resources>
    <string name="app_name">Get Up Lord</string>
    <string name="WelcomeText">Welcome to GetUpLord!</string>
    <string name="AppInformation">We help you choose your outfits without having to try on clothes. ;)</string>
    <string name="CreateOutfit">Create Outfit</string>
    <string name="AddClothingItem">Add a clothing item</string>
    <string name="Preferences">Preferences</string>

    <string name="ChangeToDarkMode">Dark Mode</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_settings">Preferences</string>
    <string name="chooseTypeMessage">Choose the clothing type you want to add</string>
    <string name="NextButton">Next</string>
    <string name="addItemButton">Add</string>
    <string name="SelectHeadWear">Head-Wear</string>
    <string name="SelectCoat">Coat</string>
    <string name="SelectShirt">Shirt</string>
    <string name="SelectPants">Pants</string>
    <string name="SelectShoes">Shoes</string>
    <string name="SelectSocks">Socks</string>

    //selections for spinner
    <string-array name="clothing_types">
        <item>Head-Wear</item>
        <item>Shirt</item>
        <item>Coat</item>
        <item>Pants</item>
        <item>Socks</item>
        <item>Shoes</item>
    </string-array>

</resources>
