<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOutfit">

    <ImageView
        android:id="@+id/shirt"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toTopOf="@+id/pants"
        app:layout_constraintEnd_toStartOf="@+id/coat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headwear"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/coat"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toTopOf="@+id/pants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shirt"
        app:layout_constraintTop_toBottomOf="@+id/headwear"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/pants"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toTopOf="@+id/socks"
        app:layout_constraintEnd_toStartOf="@+id/shoesButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sockButton"
        app:layout_constraintTop_toBottomOf="@+id/shirt"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/socks"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shoes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pants"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/shoes"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/socks"
        app:layout_constraintTop_toBottomOf="@+id/pants"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageView
        android:id="@+id/headwear"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toTopOf="@+id/coat"
        app:layout_constraintEnd_toStartOf="@+id/coatButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shirtButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/shirtButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectShirt"
        app:layout_constraintBottom_toTopOf="@+id/shirt"
        app:layout_constraintEnd_toStartOf="@+id/headwear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <Button
        android:id="@+id/coatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectCoat"
        app:layout_constraintBottom_toTopOf="@+id/coat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/headwear"
        app:layout_constraintTop_toBottomOf="@+id/headwearButton" />

    <Button
        android:id="@+id/headwearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/SelectHeadWear"
        app:layout_constraintBottom_toTopOf="@+id/coatButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/headwear"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectPants"
        app:layout_constraintBottom_toTopOf="@+id/shoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pants"
        app:layout_constraintTop_toBottomOf="@+id/coat"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/shoesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/SelectShoes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/pants"
        app:layout_constraintTop_toBottomOf="@+id/pantsButton" />

    <Button
        android:id="@+id/sockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/SelectSocks"
        app:layout_constraintBottom_toTopOf="@+id/socks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shirt"
        app:layout_constraintVertical_bias="0.909" />


</androidx.constraintlayout.widget.ConstraintLayout>